<resources>
    <string name="app_name">My FirstApp</string>
    <string name="hello">Hello Birthday</string>
    <string name="from">Your Tom</string>
    <string name="Hello">Hello</string>
    <string name="Ce">Please enter Celsius</string>
    <string name="con" translatable="false">convert to fahreuheit</string>
    <string name="re">result:</string>
    <string name="teama">TeamA</string>
    <string name="score" translatable="false">0</string>
    <string name="add3">+3 points</string>
    <string name="add2">+2 points</string>
    <string name="add1">+1 point</string>
    <string name="reset">RESET</string>
    <string name="teamb">TeamB</string>
    <string name="hint_text">Input RMB</string>
    <string name="showOut">Hello</string>
    <string name="dollar_label">dollar</string>
    <string name="euro_label">euro</string>
    <string name="won_label">won</string>
    <string name="opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="set">Setting</string>
    <string name="label_open_list">Openlist</string>
</resources>
