<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".JifenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:text="@string/teama"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:text="@string/score"
                android:textSize="70sp" />

            <Button
                android:id="@+id/btna3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_blue_bright"
                android:layout_marginLeft="10dp"
                android:onClick="btnAdd3"
                android:text="@string/add3" />

            <Button
                android:id="@+id/btna2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/holo_blue_bright"
                android:onClick="btnAdd2"
                android:text="@string/add2" />

            <Button
                android:id="@+id/btna1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/holo_blue_bright"
                android:onClick="btnAdd1"
                android:text="@string/add1" />

        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:text="@string/teamb"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/scoreb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:text="@string/score"
                android:textSize="70sp" />

            <Button
                android:id="@+id/btnb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_blue_bright"
                android:layout_marginRight="10dp"
                android:onClick="btnAdd3"
                android:text="@string/add3" />

            <Button
                android:id="@+id/btnb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@android:color/holo_blue_bright"
                android:layout_marginRight="10dp"
                android:onClick="btnAdd2"
                android:text="@string/add2" />

            <Button
                android:id="@+id/btnb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:background="@android:color/holo_blue_bright"
                android:layout_marginRight="10dp"
                android:onClick="btnAdd1"
                android:text="@string/add1" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="534dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="btnReset"
        android:text="@string/reset" />

</RelativeLayout>